// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Icon should be rendered with only required props 1`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    account_circle
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 1`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    motif_ui
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 2`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    accessibility
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 3`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    accessible
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 4`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    accessible_forward
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 5`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    account_balance
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 6`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    account_balance_wallet
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 7`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    account_balance_wallet_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 8`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    account_circle
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 9`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    add
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 10`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    add_box
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 11`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    add_box_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 12`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    add_circle
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 13`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    add_circle_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 14`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    alarm
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 15`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    alarm_add
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 16`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    alternate_email
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 17`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    apartment
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 18`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    arrow_back
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 19`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    arrow_back_ios_new
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 20`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    arrow_downward
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 21`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    arrow_drop_down
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 22`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    arrow_drop_up
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 23`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    arrow_forward
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 24`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    arrow_forward_ios
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 25`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    arrow_insert
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 26`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    arrow_left_alt
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 27`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    arrow_right_alt
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 28`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    arrow_upward
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 29`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    article
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 30`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    assignment
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 31`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    assignment_ind
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 32`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    assist_walker
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 33`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    attach_file
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 34`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    autorenew
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 35`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    backspace
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 36`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    backup
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 37`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    balance
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 38`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    bar_chart
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 39`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    blind
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 40`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    block
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 41`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    bookmark
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 42`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    bookmark_manager
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 43`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    bookmark_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 44`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    border_all
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 45`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    cached
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 46`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    calendar_month
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 47`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    calendar_today
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 48`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    call
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 49`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    call_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 50`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    cancel
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 51`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    cancel_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 52`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    cardiology
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 53`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    cases
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 54`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    chat
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 55`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    chat_bubble
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 56`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    check
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 57`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    check_circle
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 58`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    check_circle_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 59`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    checklist
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 60`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    chevron_left
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 61`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    chevron_right
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 62`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    chips
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 63`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    close
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 64`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    cloud_done
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 65`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    cloud_download
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 66`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    collapse_content
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 67`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    collections_bookmark
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 68`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    compare_arrows
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 69`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    contact_page
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 70`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    contact_support
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 71`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    content_copy
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 72`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    content_cut
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 73`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    content_paste
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 74`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    contract
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 75`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    contract_edit
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 76`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    copy_all
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 77`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    create_new_folder
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 78`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    credit_card
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 79`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    crop_free
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 80`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    dashboard
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 81`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    delete
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 82`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    delete_forever
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 83`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    delete_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 84`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    density_medium
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 85`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    description
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 86`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    device_hub
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 87`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    device_reset
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 88`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    devices
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 89`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    dictionary
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 90`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    directions_car
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 91`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    diversity_3
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 92`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    do_not_disturb_on
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 93`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    domain
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 94`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    done_all
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 95`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    download
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 96`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    download_2
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 97`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    downloading
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 98`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    draft
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 99`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    drive_folder_upload
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 100`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    edit_document
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 101`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    emoji_flags
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 102`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    emoji_flags_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 103`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    encrypted
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 104`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    error
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 105`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    error_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 106`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    event
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 107`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    event_available
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 108`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    event_busy
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 109`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    expand_all
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 110`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    expand_content
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 111`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    extension
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 112`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    external
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 113`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    fact_check
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 114`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    factory
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 115`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    favorite
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 116`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    feature_search
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 117`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    feed
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 118`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    feedback
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 119`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    file_copy
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 120`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    file_present
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 121`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    filter
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 122`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    filter_alt
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 123`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    filter_alt_off
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 124`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    filter_list
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 125`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    filter_list_off
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 126`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    filter_none
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 127`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    finance
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 128`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    fingerprint
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 129`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    flash_on
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 130`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    folder
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 131`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    folder_copy
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 132`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    folder_managed
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 133`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    folder_open
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 134`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    folder_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 135`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    folder_shared
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 136`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    format_quote
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 137`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    forum
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 138`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    grade
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 139`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    group
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 140`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    group_add
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 141`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    groups
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 142`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    handshake
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 143`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    handyman
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 144`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    heap_snapshot_large
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 145`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    hearing
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 146`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    hearing_disabled
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 147`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    help
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 148`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    help_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 149`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    home
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 150`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    home_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 151`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    how_to_reg
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 152`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    imagesmode
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 153`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    indeterminate_check_box
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 154`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    info
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 155`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    info_i
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 156`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    info_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 157`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    insert_chart
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 158`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    inventory
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 159`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    ios_share
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 160`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    keyboard
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 161`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    keyboard_alt
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 162`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    keyboard_arrow_down
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 163`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    keyboard_arrow_up
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 164`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    keyboard_voice
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 165`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    label
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 166`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    label_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 167`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    language
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 168`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    library_books
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 169`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    link
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 170`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    link_off
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 171`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    list_alt
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 172`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    lists
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 173`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    local_library
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 174`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    local_mall
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 175`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    location_off
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 176`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    location_on
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 177`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    location_on_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 178`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    lock
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 179`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    lock_open
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 180`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    logout
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 181`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    mail
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 182`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    mail_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 183`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    map
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 184`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    mode_cool
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 185`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    mode_heat
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 186`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    more_horiz
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 187`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    more_time
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 188`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    more_vert
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 189`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    moving
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 190`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    nature
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 191`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    near_me
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 192`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    nest_eco_leaf
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 193`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    note
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 194`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    note_add
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 195`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    notifications
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 196`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    notifications_active
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 197`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    notifications_off
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 198`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    palette
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 199`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    passkey
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 200`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    payments
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 201`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    person
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 202`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    person_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 203`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    phone_iphone
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 204`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    photo
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 205`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    photo_camera
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 206`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    photo_camera_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 207`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    picture_as_pdf
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 208`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    pie_chart
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 209`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    plagiarism
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 210`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    podcasts
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 211`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    priority_high
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 212`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    privacy_tip
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 213`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    prompt_suggestion
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 214`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    psychiatry
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 215`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    push_pin
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 216`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    push_pin_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 217`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    question_mark
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 218`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    receipt
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 219`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    receipt_long
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 220`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    remove
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 221`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    reply
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 222`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    schedule
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 223`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    schedule_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 224`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    school
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 225`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    search
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 226`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    send
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 227`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    send_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 228`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    sentiment_dissatisfied
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 229`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    sentiment_satisfied
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 230`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    settings
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 231`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    settings_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 232`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    share
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 233`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    shield
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 234`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    shield_lock
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 235`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    signpost
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 236`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    sim_card
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 237`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    sim_card_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 238`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    speed
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 239`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    stethoscope
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 240`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    store
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 241`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    supervisor_account
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 242`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    table_rows
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 243`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    task
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 244`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    task_alt
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 245`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    thumb_down
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 246`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    thumb_up
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 247`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    topic
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 248`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    touch_app
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 249`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    trophy
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 250`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    undo
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 251`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    upload
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 252`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    upload_2
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 253`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    upload_file
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 254`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    verified_user
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 255`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    videocam
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 256`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    videocam_off
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 257`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    visibility
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 258`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    visibility_off
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 259`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    volume_off
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 260`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    volume_up
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 261`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    volunteer_activism
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 262`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    vpn_key
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 263`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    vpn_key_off
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 264`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    warning
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 265`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    warning_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 266`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    water_drop
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 267`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    waves
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 268`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    wb_sunny
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 269`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    work
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 270`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    work_outline
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 271`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    zoom_in
  </span>
</div>
`;

exports[`Icon should render all icons in motifIcons set 272`] = `
<div>
  <span
    class="Root mtf-ui-icons"
    lang="en"
    translate="no"
  >
    zoom_out
  </span>
</div>
`;
